Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115180

QtProtobuf: Enum forward declaration is required

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • None
    • 6.5
    • Protocol Buffers
    • None
    • 8
    • 05bafbc5c (dev), 5c85dae9e (6.6), 8f4fdf54a (6.5)
    • Foundation Sprint 87, Foundation Sprint 88

      Following constructoin is not covered by qtprotobuf code generator:

       

      message  EntityResponse
      {
        enum Status {
           NOT_ASSIGNED = 0;
          ASSIGNED_PARTLY = 1;
          ASSIGNED = 2;
        }
        message Entity {
          Status res_status = 1;
        }
        repeated Entity task_list = 1;
      }
       
      

      Actual result:

      Currently  "enum Status " is not visible in the scope of Entity class;

      Output Code is not compilable;

       

      Expected result:

      Enum is visible for nested Entity class; code is compiled successfully;

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tatiana.borisova Tatiana Borisova
            tatiana.borisova Tatiana Borisova
            Vladimir Minenko Vladimir Minenko
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes