QtProtobuf: Enum declaration error

Moved declaration of the nested messages after the top-level message,
since it's required for correct evalution of parent internals.
Added test case into auto-tests.

Task-number: QTBUG-115180
Change-Id: Ie3c46076007fd46a946011607867526f17bb732f
Reviewed-by: Konrad Kujawa <konrad.kujawa@qt.io>
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>
(cherry picked from commit 05bafbc5c6aefcab6c69be75349391296eb10d14)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>